--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       content="Website for Future Ace Technica Institute"
     />
     <script src="https://kit.fontawesome.com/54685f8144.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Lemonada:wght@300&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
