--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Website for Future Ace Technica Institute"
+      content="Website for Future Ace Institute"
     />
     <script src="https://kit.fontawesome.com/54685f8144.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lemonada:wght@300&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Future Ace</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
