--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     />
     <script src="https://kit.fontawesome.com/54685f8144.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Lemonada:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bitter:ital@1&family=Oswald:wght@300&display=swap" rel="stylesheet">
     <title>Future Ace</title>
   </head>
   <body>
